--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "dependencies": {
     "next": "^3.0.6",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "yarn": "^0.27.5"
   },
   "scripts": {
-    "dev":"next",
+    "dev": "next",
     "build": "next build",
     "start": "next start"
   }
